# NONAME_FIBO

./: .gitignore
Docker/: Dockerfile
ros_ws/install/robot_bringup/share/robot_bringup/: package.sh
ros_ws/install/robot_control/lib/robot_control/: control  teleop
ros_ws/install/robot_control/share/robot_control/: package.sh
ros_ws/install/robot_description/share/robot_description/: package.sh  package.xml
ros_ws/install/robot_description/share/robot_description/config/: controller.yaml
ros_ws/install/robot_description/share/robot_description/description/: robot.urdf.xacro  robot_core.xacro  robot_test.xacro  sim_control.xacro
ros_ws/install/robot_description/share/robot_description/launch/: display.launch.py  sim.launch.py
ros_ws/log/: latest_build
ros_ws/src/robot_control/: package.xml  setup.py
ros_ws/src/robot_control/robot_control/: control_node.py  kinematics_publisher.py  teleop.py
ros_ws/src/robot_control_cpp/: CMakeLists.txt  package.xml
ros_ws/src/robot_control_cpp/include/robot_control_cpp/kinematics_calculation/: kinematics_calculation.hpp
ros_ws/src/robot_control_cpp/src/: kinematics_publisher.cpp  sim_odom_publisher.cpp
ros_ws/src/robot_control_cpp/src/kinematics_calculation/: kinematics_calculation.cpp
ros_ws/src/robot_description/: CMakeLists.txt
ros_ws/src/robot_description/config/: controller.yaml
ros_ws/src/robot_description/description/: gazebo_plugin.xacro  imu.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro
ros_ws/src/robot_description/launch/: display.launch.py  sim.launch.py
(+2 files in other folders)
